--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:orientation="vertical"
     android:background="#161A30"
     android:weightSum="6"
+    android:paddingTop="120dp"
+    android:paddingBottom="120dp"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -18,8 +20,8 @@
         android:textColor="#161A30"
         android:background="@drawable/button"
         android:textSize="25dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
         ></Button>
@@ -33,8 +35,8 @@
         android:layout_weight="1"
         android:text="City"
         android:textSize="25dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
         ></Button>
@@ -48,8 +50,8 @@
         android:layout_weight="1"
         android:text="State"
         android:textSize="25dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
         ></Button>
@@ -63,8 +65,8 @@
         android:layout_weight="1"
         android:text="Country"
         android:textSize="25dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
         ></Button>
@@ -78,8 +80,8 @@
         android:layout_weight="1"
         android:text="Delete"
         android:textSize="25dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
         ></Button>
@@ -93,8 +95,8 @@
         android:layout_weight="1"
         android:text="Show"
         android:textSize="25dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
         ></Button>
